--- a/stories-and-memories/stories-and-memories.css
+++ b/stories-and-memories/stories-and-memories.css
@@ -7,13 +7,11 @@
     margin: auto;
     width: 30%;
 }
-
 body {
     background-image: url('../images/background.jpg');
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
 }
 section {
     margin: auto;
