--- a/messages-and-updates/messages-and-updates.css
+++ b/messages-and-updates/messages-and-updates.css
@@ -1,17 +1,32 @@
-#messageInput {
+*{
+    font-family: 'Open Sans Hebrew Condensed', serif;
+}
+input[type="text"] {
     width: 300px;
 }
-#messageList {
+.list{
     margin-top: 20px;
 }
-.message {
+.message, .event, .place{
     margin-bottom: 20px;
 }
-.message .date {
+.date {
     font-size: 14px;
     color: gray;
-    width: 100%;
 }
-.message .content {
+.content {
     margin-top: 5px;
+}
+.image {
+    max-width: 400px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+.place .name {
+    font-size: 16px;
+    font-weight: bold;
+}
+.place .location {
+    font-size: 14px;
+    color: gray;
 }
