--- a/stories-and-memories/stories-and-memories.css
+++ b/stories-and-memories/stories-and-memories.css
@@ -4,8 +4,28 @@
 }
 #logo{
     display: block;
-    margin: auto;
-    width: 30%;
+    height: 100%;
+    margin-right: 8px;
+}
+.navbar {
+    background-color: rgba(255, 255, 255, 0.4);
+    height: 90px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+}
+.navbar .nav-links {
+    list-style: none;
+    display: flex;
+}
+
+.navbar .nav-links li {
+    margin: 0 10px;
+}
+.navbar .nav-links a {
+    text-decoration: none;
+    color: #333;
 }
 body {
     background-image: url('../images/background.jpg');
