--- a/page1/home-page-css.css
+++ b/page1/home-page-css.css
@@ -34,8 +34,9 @@ html, body {
     height: 100%;
 }
 body {
-    background-image: url('images/background.jpg');
+    background-image: url('../images/background.jpg');
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
 }
 .container {
