--- a/stories-and-memories/stories-and-memories.css
+++ b/stories-and-memories/stories-and-memories.css
@@ -35,3 +35,15 @@ button {
 #storyForm {
     display: none;
 }
+.img-main {
+    width: 80%;
+    height: 80%;
+}
+.main-content {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+}
+#main-gallery{
+    width: 20%;
+}
