--- a/stories-and-memories/stories-and-memories.css
+++ b/stories-and-memories/stories-and-memories.css
@@ -47,3 +47,8 @@ button {
 #main-gallery{
     width: 20%;
 }
+@media screen and (max-width: 768px) {
+    #main-gallery {
+        width: 70%;
+    }
+}
