--- a/personal-page-basic/personal-page.css
+++ b/personal-page-basic/personal-page.css
@@ -39,8 +39,8 @@ section {
     padding: 3vw;
     width: 70%;
     margin-bottom: 1.5em;
-    display: grid;
-    grid-gap: 1.5em;
+    /* display: grid; */
+    /* grid-gap: 1.5em; */
 }
 .warning {
     color: red;
