--- a/personal-memorial-page/personal-memorial-page.css
+++ b/personal-memorial-page/personal-memorial-page.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    font-family: 'Open Sans Hebrew Condensed', serif;
+    /* font-family: 'Open Sans Hebrew Condensed', serif; */
 }
 
 body {
