--- a/personal-memorial-page/personal-memorial-page.css
+++ b/personal-memorial-page/personal-memorial-page.css
@@ -10,8 +10,8 @@ body {
 }
 
 .img_topmain {
-    width: 133.333px;
-    height: 150px;
+    width: 170px;
+    height: 170px;
     border-radius: 10%;
     float:left;
     margin-top: 4%;
@@ -75,7 +75,8 @@ float: right;}
 .align{text-align:center;}
 
 .description {
-    font-size: 20px; font-weight:bold; 
+    font-size: 19px; font-weight:bold;
+    margin-right: 2%;
 }
 
 /* Media queries */
@@ -127,7 +128,7 @@ float: right;}
     #imgb2{width: 100%;} 
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 760px) {
     #p1Top {
         width: 100%;
     }
