--- a/Includes/add-new-page.html
+++ b/Includes/add-new-page.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <title>Our Legends</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="add-new-page.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/add-new-page.css">
   <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
-  <link href="../footer/footer.css" type="text/css" rel="stylesheet">
+  <link href="../CSS/footer.css" type="text/css" rel="stylesheet">
 </head>
 
 <body dir="rtl">
-    <a href="../home-page/home-page.html" id="homePageLink"><img src="../images/OurLegendsLogo.png" id="logo"></a>
+    <a href="../Index.html" id="homePageLink"><img src="../images/OurLegendsLogo.png" id="logo"></a>
     <header id="newPageHeader">
       <h1 id="addPageTitle">הוספת עמוד חדש</h1>
-      <img src="../images/addPage.png"; id="addPageImg">
+      <img src="../images/addPage.png" ; id="addPageImg">
     </header>
   
     <main class="form-div">
@@ -82,8 +82,8 @@
 
   <footer id="footerContainer"></footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="../footer/footer.js" type="text/javascript"></script>
-  <script src="add-new-page.js" type="text/javascript"></script>
+  <script src="../JS/footer.js" type="text/javascript"></script>
+  <script src="../JS/add-new-page.js" type="text/javascript"></script>
 
 
 </body>
