--- a/Includes/stories-and-memories.html
+++ b/Includes/stories-and-memories.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Stories and Memories</title>
-    <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
-    <link rel="stylesheet" type="text/css" href="stories-and-memories.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/personal-page.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/stories-and-memories.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../footer/footer.css" type="text/css" rel="stylesheet">
+    <link href="../CSS/footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header id="headerContainer"></header>
@@ -83,8 +83,8 @@
 
     <footer id="footerContainer"></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="stories-and-memories.js" type="text/javascript"></script>
-    <script src="../footer/footer.js" type="text/javascript"></script>
+    <script src="../JS/stories-and-memories.js" type="text/javascript"></script>
+    <script src="../JS/footer.js" type="text/javascript"></script>
 
 </body>
 </html>
