--- a/Includes/details.html
+++ b/Includes/details.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Details</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/personal-page.css">
 
-    <link href="../footer/footer.css" type="text/css" rel="stylesheet">
+    <link href="../CSS/footer.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,8 +19,8 @@
 
     <footer id="footerContainer"></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js" type="text/javascript"></script>
-    <script src="../footer/footer.js" type="text/javascript"></script>
+    <script src="../JS/script.js" type="text/javascript"></script>
+    <script src="../JS/footer.js" type="text/javascript"></script>
 
 </body>
 
