--- a/Includes/messages-and-updates.html
+++ b/Includes/messages-and-updates.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Messages and Updates</title>
-    <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
-    <link rel="stylesheet" type="text/css" href="messages-and-updates.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/personal-page.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/messages-and-updates.css">
     <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../footer/footer.css" type="text/css" rel="stylesheet">
+    <link href="../CSS/footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <header id="headerContainer"></header>
@@ -83,8 +83,8 @@
 
     <footer id="footerContainer"></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="messages-and-updates.js" type="text/javascript"></script>
-    <script src="../footer/footer.js" type="text/javascript"></script>
+    <script src="../JS/messages-and-updates.js" type="text/javascript"></script>
+    <script src="../JS/footer.js" type="text/javascript"></script>
 
 </body>
 </html>
