--- a/Includes/personal-memorial-page.html
+++ b/Includes/personal-memorial-page.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Our Legends</title>
-  <link rel="stylesheet" type="text/css" href="../personal-page-basic/personal-page.css">
-  <link rel="stylesheet" type="text/css" href="personal-memorial-page.css">
-  <link rel="stylesheet" type="text/css" href="../footer/footer.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/personal-page.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/personal-memorial-page.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
   <link href='https://fonts.googleapis.com/earlyaccess/opensanshebrewcondensed.css' rel='stylesheet'>
 </head>
 <body>
@@ -14,10 +14,10 @@
         <nav class="navbar">
             <img src="../images/OurLegendsLogo.png" ; id="logo">
             <ul class="nav-links">
-                <li><a href="../home-page/home-page.html">דף בית</a></li>
+                <li><a href="../Index.html">דף בית</a></li>
                 <li><a href="../personal-memorial-page/personal-memorial-page.html">דף הנצחה אישי</a></li>
-                <li><a href="../stories-and-memories/stories-and-memories.html">סיפורים וזכרונות</a></li>
-                <li><a href="../messages-and-updates/messages-and-updates.html">הודעות ועדכונים</a></li>
+                <li><a href="stories-and-memories.html">סיפורים וזכרונות</a></li>
+                <li><a href="messages-and-updates.html">הודעות ועדכונים</a></li>
             </ul>
         </nav>
     </header>
@@ -92,5 +92,5 @@
     </main>
     <footer id="footerContainer"></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../footer/footer.js" type="text/javascript"></script>
+    <script src="../JS/footer.js" type="text/javascript"></script>
 </body>
