--- a/Includes/add-new-page.html
+++ b/Includes/add-new-page.html
@@ -77,6 +77,10 @@
         <div class="button">
           <input type="submit" value="יצירת עמוד">
         </div>
+        <div class="button">
+          <a href="../Index.html"><input type="button" value="חזור למסך הבית"></a>
+        </div>
+
       </form>
     </main>
 
